2005-10-25  Florian Boor <florian.boor@kernelconcepts.de>

	* debian: Add maemo debian packaging stuff.
	* month_view.c: Make title a little bit higher.

2005-10-23  Florian Boor <florian.boor@kernelconcepts.de>

	* day_render.c, day_view.c: Fixed some runtime warnings, some reformating.
	* gtkdatesel.c: Avoid moving positions selecting a new day.
	* gtkdatesel.c: Add header to avoid warning. Change forward/backward buttons
	                in Hildon UI.
	* month_view.c: Fix title height in Hildon UI.

2005-10-21  Florian Boor <florian.boor@kernelconcepts.de>

	* main.c: Fix service name, Hildon UI bits.
	* Makefile.am: Add maemo package files to EXTRA_DIST.
	* day-view.c, event-ui.c: Some more Hildon UI bits and reformating.
	* gtkdatesel.c: Minor Hildon UI compatibility fix.

2005-10-20  Florian Boor <florian.boor@kernelconcepts.de>

	* hildon/*.in, Makefile.am, configure.ac: Change dbus service name.
	* main.c: Use Hildon file selection dialog in Hildon UI.

2005-10-19  Florian Boor <florian.boor@kernelconcepts.de>

    * main.c: Apply patch to support fullscreen mode in Maemo environment.
              A contribution by Devesh Kothari and Philippe De Swert.

2005-10-13  Florian Boor <florian.boor@kernelconcepts.de>

    * globals.h, main.c: Adapt icon loading to nasty Maemo environment.
    * day_render.c: Add sanity check.

2005-10-11  Luca De Cicco <ldecicco@gmail.com>
	* day_render.c, day_render.h: New files. They implement the day render
	`class` to display events as boxes avoiding overlapping.
	* day_view.c, day_view.h: Using day_render to display events instead
	of obsolete clist 


2005-10-10  Florian Boor <florian.boor@kernelconcepts.de>

    * event-ui.c: Fix categories handling and restoring. (#1402)

2005-09-27  Florian Boor <florian.boor@kernelconcepts.de>

    * event-ui.c: Improve window type selection to behave better using Matchbox.

2005-09-09  Luca De Cicco <ldecicco@gmail.com>
	* month_view.c: Adding support for scrolled window.
